# protoApp

./: .gitignore  Cargo.toml  HANDOFF.md  README.md  STATUS.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
crates/orbis-sidecar/: Cargo.toml
crates/orbis-sidecar/src/: client.rs  lib.rs  protocol.rs  spawn.rs
crates/orbis-sidecar/tests/: roundtrip.rs  spawn.rs
crates/protolabs-voice-core/: Cargo.toml
crates/protolabs-voice-core/src/: lib.rs
crates/protolabs-voice-core/src/api/: chat.rs  mod.rs  models.rs  speech.rs  state.rs  transcriptions.rs
crates/protolabs-voice-core/src/engines/: events.rs  llm.rs  mod.rs  stt.rs  tts.rs
crates/protolabs-voice-core/tests/: api_smoke.rs
docs/: README.md
docs/explanation/: README.md  architecture.md  engine-choices.md  voice-hotpath-vs-agent-brain.md
docs/how-to/: README.md  add-an-endpoint.md  enable-metal-cuda.md  integrate-orbis-sidecar.md  record-and-play-audio.md  swap-llm-model.md  use-openai-sdk-from-react.md
docs/reference/: README.md  cargo-features.md  openai-api.md  orbis-sidecar-protocol.md  tauri-commands.md  workspace-crates.md
docs/tutorials/: README.md  getting-started.md  run-gemma-4-locally.md  run-local-llm.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: chat.rs  mod.rs  speech.rs  state.rs  transcriptions.rs
src-tauri/src/commands/: mod.rs
src-tauri/tests/: api_smoke.rs
src/components/: chat.tsx  engine-banner.tsx  speak.tsx  transcribe.tsx
src/hooks/: use-chat.ts  use-engine-status.ts  use-greet.ts  use-speech.ts  use-transcription.ts
src/lib/: wav.ts
src/services/: commands.ts  openai.ts
src/stores/: app.ts
