[package]
name = "protoapp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "protoApp — Tauri desktop app"

[lib]
name = "protoapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri glue — `tray-icon` brings in tauri::tray for the system-tray
# resident mode; image-ico is needed to feed the default Tauri icon
# (stored as .ico) into the tray.
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
specta = { version = "=2.0.0-rc.24" }
specta-typescript = "0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }

# Async runtime for the in-process HTTP server we own
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# The engine substrate — OpenAI-compatible router + inference engines
protolabs-voice-core = { path = "../crates/protolabs-voice-core" }

[features]
# Ship with all three real engines wired on by default. First compile is
# ~15 min cold (mistralrs dominates); subsequent rebuilds are fast. On macOS
# add `--features metal` for ~10× LLM speed — requires the full Xcode.app,
# not just Command Line Tools (see docs/how-to/enable-metal-cuda.md).
default = ["engines"]
# Re-export protolabs-voice-core feature knobs so `cargo tauri build --features metal`
# etc. at the protoapp level propagates correctly.
llm = ["protolabs-voice-core/llm"]
stt = ["protolabs-voice-core/stt"]
tts = ["protolabs-voice-core/tts"]
engines = ["protolabs-voice-core/engines"]
metal = ["protolabs-voice-core/metal"]
cuda = ["protolabs-voice-core/cuda"]
