[package]
name = "orbis-sidecar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Spawns the ORBIS Python agent as a sidecar process and exposes a typed WebSocket client for Rust hosts (Tauri, voice pipelines, CLIs)."

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
url.workspace = true
futures.workspace = true

[dev-dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
tokio-tungstenite.workspace = true
