[package]
name = "protolabs-voice-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAI-compatible local HTTP server backed by in-process Rust inference engines (LLM + STT + TTS)"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
bytes.workspace = true
futures.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
uuid.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

# Feature-gated engines
mistralrs = { workspace = true, optional = true }
whisper-rs = { workspace = true, optional = true }
# Kokoro TTS via the lucasjinreal/Kokoros git dep. Publishes no crates.io
# artifact, so we pin via workspace git reference.
kokoros = { workspace = true, optional = true }
# Frontend converts browser recordings to 16 kHz mono WAV before upload
# (browsers natively decode webm/opus / mp4/aac via Web Audio, then we
# encode a simple WAV). Server just parses the WAV header with hound —
# no server-side audio codec stack required.
hound = { workspace = true, optional = true }
# Model download (first-use cache) shared by engine modules.
reqwest = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }

[features]
default = []
# Individual engines — compose them as needed.
llm = ["dep:mistralrs"]
stt = ["dep:whisper-rs", "dep:hound", "dep:reqwest", "dep:dirs"]
tts = ["dep:kokoros", "dep:hound", "dep:reqwest", "dep:dirs"]
# Umbrella: all available engines.
engines = ["llm", "stt", "tts"]
# GPU backends — harmless no-ops unless the corresponding engine is also on.
metal = ["mistralrs?/metal", "mistralrs?/accelerate", "whisper-rs?/metal"]
cuda = ["mistralrs?/cuda", "whisper-rs?/cuda"]

[dev-dependencies]
reqwest.workspace = true
tokio.workspace = true
